# cosmos-predict2.5

./: .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml  pyrefly.toml
assets/action_conditioned/basic/: inference_params.json
assets/action_conditioned/orca/: inference_params.json
assets/base/: bus_terminal.json  bus_terminal.txt  image2world.json  robot_pouring.json  robot_pouring.jsonl  robot_pouring.txt  robot_tightening.json  robot_tightening.txt  robot_welding.json  sand_mining.json  sand_mining.txt  snowy_stop_light.json  snowy_stop_light.txt  text2world.json  video2world.json
assets/multiview/: multiview.json  urban_freeway.json  urban_freeway.jsonl  urban_freeway.txt
assets/sample_gr00t_dreams_gr1/: gr00t_image2world.json
assets/video2world_cc/basic/cameras/: arc_left.txt  arc_right.txt  azimuth_left.txt  azimuth_right.txt  distance_away_1.txt  distance_away_2.txt  elevation_up_1.txt  elevation_up_2.txt  intrinsics_focal18.txt  intrinsics_focal24.txt  intrinsics_focal50.txt  rot_left.txt  rot_right.txt  tilt_down.txt  tilt_up.txt  translate_down_rot.txt  translate_up_rot.txt  zoom_in.txt  zoom_out.txt
assets/video2world_cc/basic/videos/: 0.json  1.json  all.jsonl
assets/video2world_cosmos_nemo_assets/: cosmos_nemo_assets.json  nemo_image2world.json  nemo_text2world.json
cosmos_predict2/: action_conditioned.py  action_conditioned_config.py  camera_conditioned.py  camera_conditioned_config.py  config.py  config_test.py  inference.py  init.py  multiview.py  multiview_config.py
cosmos_predict2/_src/imaginaire/: config.py  config_serialization.py  trainer.py
cosmos_predict2/_src/predict2/: conditioner.py  context_parallel_test.py
cosmos_predict2/experiments/base/: action.py  cosmos_nemo_assets.py  cosmos_nemo_assets_lora.py  groot.py
cosmos_predict2/experiments/multiview/: waymo.py
cosmos_predict2/gradio/: gradio_bootstrapper.py  model_config.py  multiview_worker.py  video2world_worker.py
docs/: inference.md  inference_auto_multiview.md  inference_robot_action_cond.md  post-training.md  post-training_cosmos_nemo_assets_lora.md  post-training_multiview.md  post-training_video2world_action.md  post-training_video2world_cosmos_nemo_assets.md  post-training_video2world_cosmos_nemo_assets_lora.md  post-training_video2world_gr00t.md  setup.md
examples/: action_conditioned.py  camera_conditioned.py  inference.py  multiview.py
examples/posttraining/groot/: post_training_groot.py
examples/posttraining/nemo/: post_training_nemo_assets.py
gradio_app/: gradio_bootstrapper.py  model_config.py
scripts/: convert_distcp_to_pt.py  convert_distcp_to_pt.sh  create_prompts_for_nemo_assets.py  download_waymo.sh  get_t5_embeddings_from_groot_dataset.py  prepare_franka_data_for_postraining.py  start_inference_orca.sh  start_post_training_action_conditioned.sh  train.py
tests/: docs_test.py  test_assets.py  test_worker.py
tests/docs_test/: action_conditioned.sh  base.sh  multiview.sh  post-training_video2world_cosmos_nemo_assets.sh
tests/gradio/: test_server.py  test_worker.py
tests/i4_vanilla/: video2world.sh
(+208 files in other folders)
